fix: page scrolling when shopping cart menu is open No overlay when scrolled on cart menu(open). So, disabled page scrolling on parent to prevent background content from being visible. We can still scroll through cart items!

--- a/src/styles/Cart.module.css
+++ b/src/styles/Cart.module.css
@@ -5,6 +5,7 @@
   width: 100%;
   min-height: 100vh;
   background-color: rgba(0, 0, 0, 0.768);
+  overflow: auto;
 }
 
 .cart {
